syntax = "proto3";

package grpc_example;

message TextMessage {
  string text = 1;
}

message ResponseMessage{
  string text=1;
}

service TextMessageService {
  rpc ClientSendMessage (TextMessage) returns (TextMessage);
}
